--- a/Discuvr/index.html
+++ b/Discuvr/index.html
@@ -13,7 +13,7 @@ onclick="document.getElementById('demo').innerHTML = Date()">-->
 
 <link rel="stylesheet" type="text/css" href="style.css">
 <div id="banner">
-<CENTER><a href="index.html"><img src="elements/graphics/general/discuvr.svg" ALIGN="BOTTOM"></a></CENTER>
+<CENTER><img src="elements/graphics/general/discuvr.svg" ALIGN="BOTTOM"></CENTER>
 <H2>Content Discovery Made Easy</H2>
     </div>
 
@@ -81,15 +81,18 @@ onclick="document.getElementById('demo').innerHTML = Date()">-->
 </figure>
 </div>
 
+
 <div id="main">
-<figure class="spotify">
-<center>
-<iframe id="player" src="" width="300" height="300" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-<script src=spotify.js>
-</script>
-</center>
+<figure class="snip1533">
+  <figcaption>
+      <h3>What is It?</h3>
+    <blockquote>
+      <p>Discuvr is a content discovery platform that serves you random content from all across the web to take the complication out of finding new content.</p>
+    </blockquote>
+  </figcaption>
 </figure>
 </div>
+
 
 <HR>
 
