imdb.js improved, works great now?

--- a/Discuvr/index.html
+++ b/Discuvr/index.html
@@ -72,11 +72,12 @@ onclick="document.getElementById('demo').innerHTML = Date()">-->
  <a href="#"></a>
 </figure>
 
-<figure class="snip1585" onclick="imdb">
+<figure class="snip1585" onclick="redirect()">
     <img src="elements/graphics/icons/clapperboard.svg" height="100px" width="100px"/>
 <figcaption>
  <h3>Movies<span>From IMDB</span></h3>
  </figcaption>
+ <script src="imdb.js"></script>
  <a href="#"></a>
 </figure>
 </div>
@@ -118,9 +119,7 @@ onclick="document.getElementById('demo').innerHTML = Date()">-->
 
 
 <!-- Here are the scripts. they will be changed to whatever you name your files-->
-<script src="imdb.js"></script>
 <script src="myScript2.js"></script>
-<script src="imdb.js"></script>
 <script src="myScript2.js"></script>
 <script src="myScript2.js"></script>
 
