--- a/Discuvr/spotify.html
+++ b/Discuvr/spotify.html
@@ -54,6 +54,13 @@ onclick="document.getElementById('demo').innerHTML = Date()">-->
  <a href="#"></a>
 </figure>
 
+<figure class="snip1585">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/5/53/Wikipedia-logo-en-big.png" height="100px" width="82px"/>
+<figcaption>
+ <h3>Wikipedia<span>The free encyclopedia</span></h3>
+ </figcaption>
+ <a href="https://en.wikipedia.org/wiki/Special:Random"></a>
+</figure>
 
 <figure class="snip1585">
     <img src="elements/graphics/icons/globe.svg" height="100px" width="100px"/>
