--- a/Discuvr/index.html
+++ b/Discuvr/index.html
@@ -107,15 +107,15 @@ onclick="document.getElementById('demo').innerHTML = Date()">-->
 <div id="credits">
     <footer>
 <H5>Created by:</H5>
-<center>
-<ul>
+
+
+<ul id="horizontal-list">
   <li><a href="#home">Brian</a></li>
   <li><a href="#news">Danielius</a></li>
   <li><a href="#contact">Kamil</a></li>
   <li><a href="#about">Robert</a></li>
   <li><a href="#about">Stephen</a></li>
 </ul>
-</center>
 
     </footer>
     </div>
